hubSide/force-app/main/default/objects/Types_piece_justificative__c/Types_piece_justificative__c.object-meta.xml
<CustomObject>
    <label>Types pièce justificative</label>
    <nameField>
        <label>Types pièce justificative name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Types pièce justificative</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>