hubSide/force-app/main/default/objects/Types_piece_justificative__c/fields/Communications_frauduleuses__c.field-meta.xml
<CustomField>
    <fullName>Communications_frauduleuses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communications frauduleuses</label>
    <type>Checkbox</type>
</CustomField>