hubSide/force-app/main/default/objects/Types_piece_justificative__c/fields/LongTitle__c.field-meta.xml
<CustomField>
    <fullName>LongTitle__c</fullName>
    <description>Intitulé complet de la pièce justificative à destination des communications clients</description>
    <label>Intitulé</label>
    <length>500</length>
    <type>Html</type>
</CustomField>