hubSide/force-app/main/default/objects/Types_piece_justificative__c/fields/Vol_caracterise__c.field-meta.xml
<CustomField>
    <fullName>Vol_caracterise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vol caractérisé</label>
    <type>Checkbox</type>
</CustomField>