hubSide/force-app/main/default/objects/Types_piece_justificative__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Oxydation__c</columns>
    <columns>Casse__c</columns>
    <columns>Vol_toute_cause__c</columns>
    <columns>Vol_caracterise__c</columns>
    <columns>Perte__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>